package service

import (
	"context"
	"time"

	pb "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1"
	"github.com/fzf-labs/godb/orm/condition"
)

// GetWxGzhUserList 公众号粉丝表-列表数据查询
func (a *AdminV1WxGzhUserService) GetWxGzhUserList(ctx context.Context, req *pb.GetWxGzhUserListReq) (*pb.GetWxGzhUserListReply, error) {
	resp := &pb.GetWxGzhUserListReply{
		Total: 0,
		List:  []*pb.WxGzhUserInfo{},
	}
	param := &condition.Req{
		Page:     req.GetPage(),
		PageSize: req.GetPageSize(),
		Query: []*condition.QueryParam{
			{
				Field: "app_id",
				Value: req.GetAppId(),
				Exp:   condition.EQ,
				Logic: condition.AND,
			},
		},
		Order: []*condition.OrderParam{
			{
				Field: "created_at",
				Order: condition.DESC,
			},
		},
	}
	if req.GetOpenid() != "" {
		param.Query = append(param.Query, &condition.QueryParam{
			Field: "openid",
			Value: req.GetOpenid(),
			Exp:   condition.EQ,
			Logic: condition.AND,
		})
	}
	if req.GetNickname() != "" {
		param.Query = append(param.Query, &condition.QueryParam{
			Field: "nickname",
			Value: "%" + req.GetNickname() + "%",
			Exp:   condition.EQ,
			Logic: condition.AND,
		})
	}
	if req.GetSubscribeStatus() != 0 {
		param.Query = append(param.Query, &condition.QueryParam{
			Field: "subscribe_status",
			Value: req.GetSubscribeStatus(),
			Exp:   condition.EQ,
			Logic: condition.AND,
		})
	}
	list, p, err := a.wxGzhUserRepo.FindMultiCacheByCondition(ctx, param)
	if err != nil {
		return nil, pb.ErrorReasonDataSQLError(pb.WithError(err))
	}
	resp.Total = int32(p.Total)
	if len(list) > 0 {
		for _, v := range list {
			resp.List = append(resp.List, &pb.WxGzhUserInfo{
				Id:              v.ID,
				AppId:           v.AppID,
				Openid:          v.Openid,
				Unionid:         v.Unionid,
				SubscribeStatus: v.SubscribeStatus,
				Nickname:        v.Nickname,
				AvatarUrl:       v.AvatarURL,
				Language:        v.Language,
				Country:         v.Country,
				Province:        v.Province,
				City:            v.City,
				TagIds:          v.TagIds,
				Remark:          v.Remark,
				CreatedAt:       v.CreatedAt.Format(time.RFC3339),
				UpdatedAt:       v.UpdatedAt.Format(time.RFC3339),
			})
		}
	}
	return resp, nil
}
